# Datasets

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/cifar/: cifar10.rs  mod.rs
src/cifar_datasets/: cifar_builder.rs  download.rs  mod.rs
src/download_helper/: downloader.rs  mod.rs
src/mnist/: mnist_builder.rs  mod.rs  test.rs
src/mnist_datasets/: download.rs  helper.rs  mnist_builder.rs  mod.rs
