[package]
name = "datasets"
version = "0.1.2"
authors = ["ZuseZ4"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
default = []
download = ["reqwest", "flate2"]

[dependencies]
byteorder = "1.0.0"
ndarray = "0.14"

reqwest = {version = "0.10", optional = true, features = ["blocking"]}
flate2 = {version = "1.0.2", optional = true, features = ["rust_backend"], default-features = false}
tar = "0.4"
